# py-ttw-entry-points-demo

./: .gitignore  Pipfile  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml
docs/: conf.py  index.rst
entry_points_demo/commands/: extras.py
test/: test_kia_ora_te_ao.py
