# :see: https://packaging.python.org/en/latest/specifications/declaring-project-metadata

[project]
name = "boilerplate"
version = "1.0.0"
description = "Template for Python repos"
readme = "README.rst"
requires-python = ">= 3.12"
license = { text = "© 2023 PHX Limited - All Rights Reserved" }
authors = [
    { email = "Phoenix Zerin <phx@phx.nz>" }
]

dependencies = [
]

[project.urls]
Documentation = "https://github.com/phx-nz/boilerplate"
Changelog = "https://github.com/phx-nz/boilerplate/releases"
Issues = "https://github.com/phx-nz/boilerplate/issues"
Repository = "https://github.com/phx-nz/boilerplate"

[tool.autohooks]
mode = "pipenv"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
    "autohooks.plugins.pytest"
]
