# :see: https://packaging.python.org/en/latest/specifications/declaring-project-metadata

[project]
name = "py-ttw-entry-points-demo"
version = "1.0.0"
description = "Simple demonstration showing how entry points work"
readme = "README.rst"
requires-python = ">= 3.12"
license = { text = "© 2023 PHX Limited - All Rights Reserved" }
authors = [
    { email = "Phoenix Zerin <phx@phx.nz>" }
]

dependencies = [
]

[project.entry-points."app.command"]
extras = "entry_points_demo.commands.extras:command"

[tool.autohooks]
mode = "pipenv"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
]
